better how to cite paragraph

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -33,37 +33,29 @@
       <div class="container">
         <div class="row workingPaperContainer">
           <div class="col-xs-6 col-md-12">
-            <p>{{ 'WORKING_PAPER_1' | translate }} <a href="http://dh2016.adho.org/">Digital Humanities 2016</a>.
+          <div class="thumbnailStudy" id="studies">
+              <span class="studyTitle">{{ 'HOW_TO_CITE' | translate}}</span>
+
+            </div>
+            <p>{{ 'WORKING_PAPER' | translate }}
             </p>
 
-            <p>{{ 'WORKING_PAPER_2' | translate }} </p>
+            <h5 class="slTitle">{{ 'DATABASE' | translate}}</h5>
+            <p>Dedinger, Béatrice, et Paul Girard. 2017. « Exploring trade globalization in the long run: The RICardo project ». <i>Historical Methods: A Journal of Quantitative and Interdisciplinary History</i> 50 (1): 30‑48. doi:10.1080/01615440.2016.1220269.
+            <br>
+            Links to <a href="http://www.tandfonline.com/doi/citedby/10.1080/01615440.2016.1220269">the paper at Historical Methods</a> and to <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods_revised.pdf">our preprint version: 01-May-2016</a>
+            </p>
+
+            <h5 class="slTitle">{{ 'EXPLORATION_TOOL' | translate}}</h5>
+
+            <p> Girard, Paul, Béatrice Dedinger, Donato Ricci, Benjamin Ooghe-Tabanou, Mathieu Jacomy, Guillaume Plique, et Grégory Tible. 2016. « RICardo Project : Exploring XIX Century International Trade ». In <i>Digital Humanities 2016: Conference Abstracts</i>, 208‑10. agiellonian University & Pedagogical University, Kraków, Poland. <a href="http://dh2016.adho.org/abstracts/177">http://dh2016.adho.org/abstracts/177</a>
+            <br>
+            links to <a href="http://medialab.github.io/ricardo">our presentation slides</a> et vers <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_fr.pdf">l'abstract en français</a> 
+            </p>
             
           </div>
           
-            <div class="col-xs-6 col-md-6 workingPaper">
-              <h4>Abstract DH2016</h4>
-              <ul>
-                <li>
-                  <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_fr.pdf">abstract Ricardo DH 2016 (fr)</a>
-                </li>
-                <li>
-                  <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_en.pdf">abstract Ricardo DH 2016 (en)</a> 
-                </li> 
-              </ul>
-            </div>
-            <div class="col-xs-6 col-md-6 workingPaper">
-              <h4>Historical Methods</h4>
-              Working Paper Historical Methods (en) 
-              <ul>
-                <li>
-                  <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Submitted to Historical Methods: 15-Dec-2015</a>
-                </li>
-                <li>
-                  <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods_revised.pdf">Revised version submitted: 01-May-2016</a>
-                </li> 
-              </ul>
-              
-            </div>
+          
           </div>
 
       </div>
