#48 add content txt page home + translate + delete footer

--- a/client/partials/footer.html
+++ b/client/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <ul class="list-unstyled list-inline col-sm-12">
-        <li ng-repeat="view in views" ng-class="{ active: isActive('/' + view.slug)}"><a href="#/{{view.slug}}">{{view.label}}</a></li>
+        <li><a href="#/legalNotice">Legal Notice</a></li>
       </ul>
       <ul>
         <li><a href="#">SciencesPo Médialab</a></li>
