--- a/client/css/style.css
+++ b/client/css/style.css
@@ -72,7 +72,7 @@ html {
 body {
     font-family: 'merriweather', 'Georgia', serif;
     background-color: #f5f5f5;
-    margin-bottom: 60px;
+    margin-bottom: 4em;
 }
 
 h1,
@@ -84,19 +84,36 @@ h5 {
     font-weight: bold;
 }
 
-#footer {
+footer {
+    position: absolute;
+    bottom: -1em;
     width: 100%;
+    height: 4em;
+    background-color: #0c393f;
+}
 
-    /* Set the fixed height of the footer here */
-    /*height: 60px;*/
-    background-color: #5e5e5e;
+footer ul {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+footer a {
+    display: block;
+    margin: 1.2em 1.5em 0;
+    font-family: 'montserrat', 'Arial', sans-serif;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+footer a,
+footer a:hover {
     color: white;
 }
 
-#legal {
-    padding-top: 20pc;
-    font-size: 20px;
-}
+/*
+ * Affix navbar
+ */
 
 .affix {
     top: 0;
@@ -195,8 +212,6 @@ h5 {
 /* Custom page CSS
 -------------------------------------------------- */
 
-/* Not required for template or sticky footer method. */
-
 #view {
     padding-top: 50px;
 }
@@ -213,225 +228,9 @@ body > .container {
     margin: 20px 0;
 }
 
-#footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
-}
-
 /*
  * Home
  */
-
-#homeImage {
-    height: 600px;
-    text-align: center;
-    margin-bottom: 40px;
-    position: relative;
-    overflow-x: hidden;
-}
-
-#backHomeImage {
-    width: 100%;
-    height: 600px;
-    object-fit: cover;
-    background-repeat: repeat;
-}
-
-#imgTitle {
-    position: absolute;
-    top: 200px;
-    left: 0;
-    width: 100%;
-    font-size: 80px;
-}
-
-#imgSubtitle {
-    position: absolute;
-    top: 370px;
-    left: 0;
-    width: 100%;
-    font-size: 30px;
-}
-
-#homeSubtitle,
-#studiesAbstract {
-    font-family: 'montserrat';
-    font-size: 20px;
-    line-height: 40px;
-}
-
-#homeSubtitle {
-    font-size: 20px;
-}
-
-.workingPaperContainer {
-    margin-top: 40px;
-}
-
-.workingPaper {
-    text-align: center;
-}
-
-.workingPaper ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.spaceBetweenParagraphs {
-    width: 100%;
-    height: 120px;
-    font-size: 60px;
-    line-height: 120px;
-    text-align: center;
-    color: #999;
-}
-
-.study {
-    margin: 20px 0;
-}
-
-.descriptions {
-    font-size: 14px;
-    line-height: 30px;
-}
-
-.studyDescription {
-    font-family: 'montserrat';
-    font-weight: 400;
-    padding: 10px 0px;
-    font-size: 14px;
-    line-height: 26px;
-}
-
-ol.storylinesContainer {
-    list-style-type: none;
-    margin-top: 30px;
-    padding-left: 0;
-}
-
-li.storyline {
-    font-family: 'Merriweather-Light';
-    font-size: 12px;
-    padding-bottom: 40px;
-    line-height: 26px;
-}
-
-.exploreContainer {
-    width: 100%;
-    text-align: left;
-}
-
-.exploreButton {
-    font-family: 'montserrat';
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 10px;
-    font-weight: 700;
-    background-color: #57AACE;
-    border: none;
-    color: white;
-}
-
-.study {
-    margin: 20px 0;
-}
-
-.thumbnailStudy {
-    position: relative;
-}
-
-.backStudies {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-}
-
-.frontStudies {
-    z-index: 1;
-    position: absolute;
-    left: 50%;
-    -webkit-transform: translateY(-50%) translateX(-50%);
-    -moz-transform: translateY(-50%) translateX(-50%);
-    transform: translateY(-50%) translateX(-50%);
-    top: 75px;
-}
-
-.studyTitle {
-    font: 20px 'montserrat';
-    font-weight: 100;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: black;
-}
-
-.authorName {
-    font-style: italic;
-    font-size: 11px;
-    width: 100%;
-    padding-bottom: 5px;
-    margin-top: -5px;
-}
-
-.storyline {
-    clear: both;
-}
-
-.storyline a {
-    text-decoration: none;
-}
-
-.slImage {
-    position: relative;
-    margin-bottom: 30px;
-    margin-right: 30px;
-    float: left;
-    z-index: 1;
-}
-
-.slTitle {
-    font-family: 'montserrat';
-    font-size: 16px;
-    color: #428bca;
-}
-
-.slPara {
-    color: #999;
-    font-size: 16px;
-}
-
-.slPara ul {
-    color: #999;
-    font-size: 16px;
-}
-
-.frontSL {
-    display: block;
-    position: relative;
-    margin-top: -200px;
-    line-height: 200px;
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    font-family: 'montserrat';
-    font-size: 14px;
-    color: white;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    background-color: rgba(87, 170, 206, 0.8);
-    z-index: 2;
-}
-
-.frontSL:active,
-.frontSL:hover {
-    color: white;
-}
-
-#workingPaper {
-    background-color: white;
-    padding-bottom: 30px;
-}
 
 /*
  * Navbar
