--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,35 +1,3 @@
-@font-face {
-    font-family: 'merriweather';
-    src: url("fonts/merriweather-regular-webfont.eot");
-    src: url("fonts/merriweather-regular-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/merriweather-regular-webfont.woff") format("woff"), url("fonts/merriweather-regular-webfont.ttf") format("truetype"), url("fonts/merriweather-regular-webfont.svg#merriweatherregular") format("svg");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'merriweather';
-    src: url("fonts/merriweather-light-webfont.eot");
-    src: url("fonts/merriweather-light-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/merriweather-light-webfont.woff") format("woff"), url("fonts/merriweather-light-webfont.ttf") format("truetype"), url("fonts/merriweather-light-webfont.svg#merriweatherlight") format("svg");
-    font-weight: lighter;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'merriweather';
-    src: url("fonts/merriweather-italic-webfont.eot");
-    src: url("fonts/merriweather-italic-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/merriweather-italic-webfont.woff") format("woff"), url("fonts/merriweather-italic-webfont.ttf") format("truetype"), url("fonts/merriweather-italic-webfont.svg#merriweatheritalic") format("svg");
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'merriweather';
-    src: url("fonts/merriweather-bold-webfont.eot");
-    src: url("fonts/merriweather-bold-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/merriweather-bold-webfont.woff") format("woff"), url("fonts/merriweather-bold-webfont.ttf") format("truetype"), url("fonts/merriweather-bold-webfont.svg#merriweatherbold") format("svg");
-    font-weight: bold;
-    font-style: normal;
-}
-
 /*
  * Alert
  */
@@ -70,7 +38,7 @@ html {
 }
 
 body {
-    font-family: 'merriweather', 'Georgia', serif;
+    font-family: 'Open Sans', 'Helvetica', sans-serif;
     background-color: #f5f5f5;
     margin-bottom: 4em;
 }
@@ -81,7 +49,8 @@ h3,
 h4,
 h5 {
     font-family: 'montserrat', 'Arial', sans-serif;
-    font-weight: bold;
+    font-weight: normal;
+    color: #1c747f;
 }
 
 footer {
@@ -216,10 +185,6 @@ footer a:hover {
     padding-top: 50px;
 }
 
-.container-top {
-    padding-top: 150px;
-}
-
 body > .container {
     padding: 53px 15px 60px 15px;
 }
@@ -231,6 +196,101 @@ body > .container {
 /*
  * Home
  */
+.container-intro {
+    padding-bottom: 5em;
+}
+
+.container-science,
+.container-links,
+.container-rss {
+    padding-top: 5em;
+    padding-bottom: 5em;
+}
+
+.container-links,
+.container-rss {
+    background-color: white;
+}
+
+.container-links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-links .col-sm-3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.home-title {
+    color: #1c747f;
+    font-weight: 400;
+}
+
+.home-title + p {
+    color: #1c747f;
+}
+
+.box-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 13em;
+    height: 13em;
+    padding: 1.5em;
+    background-color: #1c747f;
+    transition: all .35s ease-in-out;
+    transform: rotate(-15deg);
+    border-radius: 1.5em;
+}
+
+.box-container:hover {
+    transition: all .35s ease-in-out;
+    transform: scale(1.1) rotate(-15deg);
+}
+
+.box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 15em;
+    height: 15em;
+    padding: 0;
+    color: white;
+    white-space: inherit;
+    transition: all .35s ease-in-out;
+    transform: rotate(15deg);
+}
+
+.box:hover {
+    text-decoration: none;
+    color: white;
+    transition: all .35s ease-in-out;
+}
+
+.box h2 {
+    margin-top: 0;
+    color: white;
+    font-size: 1.8em;
+    font-weight: 300;
+}
+
+.box p {
+    margin-bottom: 0;
+    font-size: 0.9em;
+    font-weight: 300;
+}
+
+.container-science a {
+    color: #e2ac13;
+}
+
+.container-science h3 + p {
+    color: #1c747f;
+}
 
 /*
  * Navbar
@@ -739,7 +799,7 @@ h4 {
     text-transform: lowercase;
     color: #777;
     font-size: 1em;
-    font-family: 'merriweather', 'Georgia', serif;
+    font-family: 'Open Sans', 'Helvetica', sans-serif;
     font-weight: normal;
     margin-bottom: 2px;
 }
@@ -1143,7 +1203,7 @@ div #reporting-entities-container {
     border: 0px;
     border-radius: 5px;
     opacity: 0;
-    font-family: 'merriweather', 'Georgia', serif;
+    font-family: 'Open Sans', 'Helvetica', sans-serif;
     font-size: 12px;
 }
 
