--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -14,36 +14,45 @@
   <div class="row">
     <div class="container">
       <div class="row">
-        <div class="col-sm-3">
-          <div class="box-container">
-            <a href="#/world" class="btn btn-link box text-center">
-              <h2>World</h2>
-              <p>{{ 'HOME_WORLD_PARA' | translate }}</p>
-            </a>
+        <div class="col-md-3">
+          <div class="box-bg box-bg-world">
+            <div class="box-container">
+              <a href="#/world" class="btn btn-link box text-center">
+                <h2>World</h2>
+                <p>{{ 'HOME_WORLD_PARA' | translate }}</p>
+              </a>
+            </div>
+
           </div>
         </div>
-        <div class="col-sm-3">
-          <div class="box-container">
-            <a href="#/country" class="btn btn-link box text-center">
-              <h2>Country</h2>
-              <p>{{ 'HOME_COUNTRY_PARA' | translate }}</p>
-            </a>
+        <div class="col-md-3">
+          <div class="box-bg box-bg-country">
+            <div class="box-container">
+              <a href="#/country" class="btn btn-link box text-center">
+                <h2>Country</h2>
+                <p>{{ 'HOME_COUNTRY_PARA' | translate }}</p>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="col-sm-3">
-          <div class="box-container">
-            <a href="#/bilateral" class="btn btn-link box text-center">
-              <h2>Bilateral</h2>
-              <p>{{ 'HOME_BILATERAL_PARA' | translate }}</p>
-            </a>
+        <div class="col-md-3">
+          <div class="box-bg box-bg-bilateral">
+            <div class="box-container">
+              <a href="#/bilateral" class="btn btn-link box text-center">
+                <h2>Bilateral</h2>
+                <p>{{ 'HOME_BILATERAL_PARA' | translate }}</p>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="col-sm-3">
-          <div class="box-container">
-            <a href="#/metaData" class="btn btn-link box text-center">
-              <h2>Metadata</h2>
-              <p>{{ 'HOME_METADATA_PARA' | translate }}</p>
-            </a>
+        <div class="col-md-3">
+          <div class="box-bg box-bg-metadata">
+            <div class="box-container">
+              <a href="#/metaData" class="btn btn-link box text-center">
+                <h2>Metadata</h2>
+                <p>{{ 'HOME_METADATA_PARA' | translate }}</p>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -53,17 +62,17 @@
 <div class="container container-science">
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
-      <h3 class="text-center">{{ 'HOME_SCIENCE_TITLE' | translate }}</h3>
-      <p class="lead text-center">{{ 'HOME_SCIENCE_LEAD' | translate }}</p>
+      <h3 class="title-border">{{ 'HOME_SCIENCE_TITLE' | translate }}</h3>
+      <p class="lead">{{ 'HOME_SCIENCE_LEAD' | translate }}</p>
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-5 col-sm-offset-1">
+    <div class="col-sm-4 col-sm-offset-2">
       <h4><strong>{{ 'HOME_SCIENCE_LEFT_SUBTITLE' | translate }}</strong></h4>
       <p>{{ 'HOME_SCIENCE_LEFT_PARA' | translate }}</p>
       <a href="https://github.com/medialab/ricardo">https://github.com/medialab/ricardo</a>
     </div>
-    <div class="col-sm-5">
+    <div class="col-sm-4">
       <h4><strong>{{ 'HOME_SCIENCE_RIGHT_SUBTITLE' | translate }}</strong></h4>
       <p>{{ 'HOME_SCIENCE_RIGHT_PARA' | translate }} <a href="https://opendatacommons.org/licenses/by/">https://opendatacommons.org/licenses/by/</a> <a href="https://github.com/medialab/ricardo_data">https://github.com/medialab/ricardo_data</a></p>
     </div>
@@ -73,8 +82,8 @@
   <div class="row">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12">
-          Flux RSS
+        <div class="col-sm-10 col-sm-offset-2">
+          <h3 class="title-border">{{ 'HOME_BLOG_TITLE' | translate }}</h3>
         </div>
       </div>
     </div>
