--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,9 +1,11 @@
 <div class="container container-intro">
   <div class="row">
-    <div class="col-sm-5 col-sm-push-7">
-      <img class="img-responsive pull-left" src="http://fakeimg.pl/290x220/?text=World&font=lobster" width="290" height="250">
+    <div class="col-md-5 col-md-push-7">
+      <div class="container-img">
+        <img class="img-responsive pull-left" src="http://fakeimg.pl/290x220/?text=World&font=lobster" width="290" height="250">
+      </div>
     </div>
-    <div class="col-sm-5 col-sm-offset-2 col-sm-pull-5">
+    <div class="col-md-5 col-md-offset-2 col-md-pull-5">
       <h1 class="home-title">{{ 'HOME_INTRO' | translate }}</h1>
       <p class="lead">{{ 'HOME_INTRO_LEAD' | translate }}</p>
       <p>{{ 'HOME_INTRO_PARA' | translate }}</p>
@@ -12,46 +14,47 @@
 </div>
 <div class="container-fluid container-links">
   <div class="row">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="box-bg box-bg-world">
-            <div class="box-container">
-              <a href="#/world" class="btn btn-link box text-center">
-                <h2>World</h2>
-                <p>{{ 'HOME_WORLD_PARA' | translate }}</p>
-              </a>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="box-bg box-bg-country">
-            <div class="box-container">
-              <a href="#/country" class="btn btn-link box text-center">
-                <h2>Country</h2>
-                <p>{{ 'HOME_COUNTRY_PARA' | translate }}</p>
-              </a>
+    <div class="col-md-12">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 col-md-3">
+            <div class="box-bg box-bg-world">
+              <div class="box-container">
+                <a href="#/world" class="btn btn-link box text-center">
+                  <h2>World</h2>
+                  <p>{{ 'HOME_WORLD_PARA' | translate }}</p>
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3">
-          <div class="box-bg box-bg-bilateral">
-            <div class="box-container">
-              <a href="#/bilateral" class="btn btn-link box text-center">
-                <h2>Bilateral</h2>
-                <p>{{ 'HOME_BILATERAL_PARA' | translate }}</p>
-              </a>
+          <div class="col-sm-6 col-md-3">
+            <div class="box-bg box-bg-country">
+              <div class="box-container">
+                <a href="#/country" class="btn btn-link box text-center">
+                  <h2>Country</h2>
+                  <p>{{ 'HOME_COUNTRY_PARA' | translate }}</p>
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3">
-          <div class="box-bg box-bg-metadata">
-            <div class="box-container">
-              <a href="#/metaData" class="btn btn-link box text-center">
-                <h2>Metadata</h2>
-                <p>{{ 'HOME_METADATA_PARA' | translate }}</p>
-              </a>
+          <div class="col-sm-6 col-md-3">
+            <div class="box-bg box-bg-bilateral">
+              <div class="box-container">
+                <a href="#/bilateral" class="btn btn-link box text-center">
+                  <h2>Bilateral</h2>
+                  <p>{{ 'HOME_BILATERAL_PARA' | translate }}</p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="box-bg box-bg-metadata">
+              <div class="box-container">
+                <a href="#/metaData" class="btn btn-link box text-center">
+                  <h2>Metadata</h2>
+                  <p>{{ 'HOME_METADATA_PARA' | translate }}</p>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -61,18 +64,18 @@
 </div>
 <div class="container container-science">
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
+    <div class="col-md-8 col-md-offset-2">
       <h3 class="title-border">{{ 'HOME_SCIENCE_TITLE' | translate }}</h3>
       <p class="lead">{{ 'HOME_SCIENCE_LEAD' | translate }}</p>
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-4 col-sm-offset-2">
+    <div class="col-md-4 col-md-offset-2">
       <h4><strong>{{ 'HOME_SCIENCE_LEFT_SUBTITLE' | translate }}</strong></h4>
       <p>{{ 'HOME_SCIENCE_LEFT_PARA' | translate }}</p>
       <a href="https://github.com/medialab/ricardo">https://github.com/medialab/ricardo</a>
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <h4><strong>{{ 'HOME_SCIENCE_RIGHT_SUBTITLE' | translate }}</strong></h4>
       <p>{{ 'HOME_SCIENCE_RIGHT_PARA' | translate }} <a href="https://opendatacommons.org/licenses/by/">https://opendatacommons.org/licenses/by/</a> <a href="https://github.com/medialab/ricardo_data">https://github.com/medialab/ricardo_data</a></p>
     </div>
@@ -82,7 +85,7 @@
   <div class="row">
     <div class="container">
       <div class="row">
-        <div class="col-sm-10 col-sm-offset-2">
+        <div class="col-md-10 col-md-offset-2">
           <h3 class="title-border">{{ 'HOME_BLOG_TITLE' | translate }}</h3>
         </div>
       </div>
