--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-5 col-md-push-7">
       <div class="container-img">
-        <img class="img-responsive pull-left" src="http://fakeimg.pl/290x220/?text=World&font=lobster" width="290" height="250">
+        <img class="img-responsive pull-left" src="../img/home_harbor.jpg" width="320" height="320" alt="Chambre de commerce">
       </div>
     </div>
     <div class="col-md-5 col-md-offset-2 col-md-pull-5">
