--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -50,7 +50,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="box-bg box-bg-metadata">
               <div class="box-container">
-                <a href="#/metaData" class="btn btn-link box text-center">
+                <a href="#/metadata" class="btn btn-link box text-center">
                   <h2>Metadata</h2>
                   <p>{{ 'HOME_METADATA_PARA' | translate }}</p>
                 </a>
