add favicons + add content legal notice + fix various html

--- a/client/partials/glossary.html
+++ b/client/partials/glossary.html
@@ -43,7 +43,7 @@
       <dl class="well">
         <dt>{{ 'GLOSSARY_TITLE5' | translate }}</dt>
         <dd>
-          {{ 'GLOSSARY_DESC5' | translate }}<br>{{ 'GLOSSARY_DESC55' | translate }} <a href="#" target="_blank">Historical Methods (en)</a>.<br>{{ 'GLOSSARY_DESC555' | translate }}
+          {{ 'GLOSSARY_DESC5' | translate }}<br>{{ 'GLOSSARY_DESC55' | translate }} <a href="http://ricardo.medialab.sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf" target="_blank">Historical Methods (en)</a>.<br>{{ 'GLOSSARY_DESC555' | translate }}
         </dd>
       </dl>
     </div>
