--- a/client/css/style.css
+++ b/client/css/style.css
@@ -47,7 +47,7 @@ html {
 body {
     font-family: 'Open Sans', 'Helvetica', sans-serif;
     background-color: #f5f5f5;
-    margin-bottom: 4em;
+    margin-bottom: 7.5em;
 }
 
 /* Responsive */
@@ -408,6 +408,10 @@ dt {
     #nav .affix-top .navbar-nav {
         float: right;
     }
+
+    #nav .affix-top .navbar-nav:not(.navbar-right) {
+        margin-right: 2em;
+    }
 }
 
 @media (max-width: 767px) {
@@ -488,6 +492,7 @@ body > .container {
 
 .container-img {
     transform: rotate(-15deg);
+    margin-bottom: 2em;
 }
 
 .container-img img {
@@ -618,6 +623,7 @@ body > .container {
 
 .box h2 {
     margin-top: 0;
+    margin-bottom: 0.2em;
     color: white;
     font-size: 1.8em;
     font-weight: normal;
@@ -631,6 +637,10 @@ body > .container {
 
 .container-science a {
     color: #e2ac13;
+}
+
+h1.title-border {
+    text-transform: uppercase;
 }
 
 h1.title-border,
@@ -710,7 +720,7 @@ h2.title-border {
     .container-img {
         overflow: hidden;
         width: 100%;
-        margin-bottom: 2em;
+        margin-bottom: 10em;
     }
 
     .box-bg-world,
@@ -859,11 +869,10 @@ h2.title-border {
     border-radius: 0;
     -webkit-box-shadow: none;
     box-shadow: none;
-    color: #663333;
+    color: #e2ac13;
     background-color: #FAFAFA;
     border-bottom: 1px solid #e2ac13;
     font-size: 16px;
-    font-weight: 600;
 }
 
 .selectPartners > .ui-select-match {
@@ -901,8 +910,8 @@ h2.title-border {
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus,
 #select-doubleChart select {
-    color: #222;
-    background-color: #e8e8e8;
+    color: white;
+    background-color: #e2ac13;
 }
 
 .inline-select .dropdown-menu > li > a,
@@ -1556,7 +1565,8 @@ div #reporting-entities-container {
 .matrix-tooltip h5,
 .continent-tooltip h5,
 .synth-tooltip h5 {
-    color: #e2ac13;
+    margin-top: 0;
+    color: white;
 }
 
 .matrix-tooltip hr,
