--- a/client/partials/corpus.html
+++ b/client/partials/corpus.html
@@ -36,7 +36,7 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <h2 class="title-border">{{ 'OPEN_INTRO_TITLE' | translate }}</h2>
-      <p>{{ 'OPEN_PARA1' | translate }}</p>
+      <p>{{ 'OPEN_PARA1' | translate }} <a href="https://github.com/medialab/ricardo" target="_blank">github</a>.</p>
     </div>
   </div>
 </div>
