--- a/client/partials/legalNotice.html
+++ b/client/partials/legalNotice.html
@@ -1,9 +1,68 @@
 <div class="container container-page">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <h1 class="title-border">Legal Notice</h1>
-      <p class="lead">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</p>
+      <h1 class="title-border">Legal notice</h1>
+      <h2 class="title-border">The contents of this site were supplied by</h2>
+      <address>
+        <p><strong>Sciences Po</strong>
+          <br>
+          27 rue Saint-Guillaume
+          <br>
+          75337 Paris Cedex 07
+          <br>
+          Tel. : 01 45 49 50 50
+          <br>
+          Fax. : 01 42 22 31 26
+          <br>
+          webmestre ( AT ) sciencespo ( DOT ) fr
+          <br>
+          Contact webmaster : paul.girard ( AT ) sciencespo ( DOT ) fr
+        </p>
+      </address>
     </div>
   </div>
 </div>
-
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <h2 class="title-border">Publisher</h2>
+      <p><strong>Frédéric Mion</strong>, President of Sciences Po</p>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <h2 class="title-border">Hosting</h2>
+      <p>This internet site is hosted by Fondation Nationale des Sciences Politiques (FNSP), Sciences Po - Direction des Systèmes d'Information</p>
+      <address>
+        <p>
+            <strong>APE Code</strong>: 803Z
+            <br>
+            27, rue saint Guillaume
+            <br>
+            75337 Paris cedex 07
+        </p>
+      </address>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <h2 class="title-border">Industrial and Intellectual Property</h2>
+      <p>Except for explicitly licensed elements (website source codes), all information on this web site (text, photos, logos…) is protected by the copyrights held by Sciences Po or their partners.</p>
+      <p>Therefore, the information may not be reproduced, modified, republished, re-aired, translated, distributed or reused in any manner, without the written consent of Sciences Po.</p>
+      <p>The Sciences Po site’s title, concept and form, as well as its content, such as news, descriptions, illustrations and original images and their organisation, and any software compilation, source code and other elements contained on the Sciences Po site are the property of Sciences Po.</p>
+    </div>
+  </div>
+</div>
+<div class="container container-last">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <h2 class="title-border">Hypertext Links</h2>
+      <p>Our pages also contain links to other sites for which we are in no manner responsible, neither regarding their adhesion to public order or good conduct, on the one hand, nor regarding their personal data privacy policies and use, on the other.</p>
+      <p>By accessing an outside site, through a hypertext link, you accept that this access is carried out at your own risk. Therefore, Sciences Po will in no way be held responsible for any direct or indirect damages resulting from your access to an outside site through a hypertext link</p>
+    </div>
+  </div>
+</div>
