#48 add section How to cite + fix font size for lead paragraphe pages

--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -53,7 +53,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h1 class="title-border">{{ 'BILATERAL_INTRO_TITLE' | translate }}</h1>
-      <p class="lead">{{ 'BILATERAL_INTRO_PARA' | translate }}</p>
+      <p>{{ 'BILATERAL_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
