--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -33,7 +33,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h1 class="title-border">{{ 'COUNTRY_INTRO_TITLE' | translate }}</h1>
-      <p class="lead">{{ 'COUNTRY_INTRO_PARA' | translate }}</p>
+      <p>{{ 'COUNTRY_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
