--- a/client/partials/about.html
+++ b/client/partials/about.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <h1 class="title-border">{{ 'ABOUT_INTRO_TITLE' | translate }}</h1>
-      <p class="lead">{{ 'ABOUT_INTRO_LEAD' | translate }}</p>
+      <p>{{ 'ABOUT_INTRO_LEAD' | translate }}</p>
     </div>
   </div>
 </div>
