--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -64,20 +64,24 @@
 </div>
 <div class="container container-science">
   <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <h3 class="title-border">{{ 'HOME_SCIENCE_TITLE' | translate }}</h3>
-      <p class="lead">{{ 'HOME_SCIENCE_LEAD' | translate }}</p>
-    </div>
-  </div>
-  <div class="row">
     <div class="col-md-4 col-md-offset-2">
-      <h4><strong>{{ 'HOME_SCIENCE_LEFT_SUBTITLE' | translate }}</strong></h4>
-      <p>{{ 'HOME_SCIENCE_LEFT_PARA' | translate }}</p>
-      <a href="https://github.com/medialab/ricardo">https://github.com/medialab/ricardo</a>
+      <h3 class="title-border">{{ 'HOME_HOWTOCITE_TITLE' | translate }}</h3>
+      <p>{{ 'HOME_HOWTOCITE_LEAD' | translate }}</p>
+      <h4><strong>{{ 'HOME_HOWTOCITE_SUBTITLE1' | translate }}</strong></h4>
+      <p>{{ 'HOME_HOWTOCITE_PARA1' | translate }}</p>
+      <p>{{ 'HOME_HOWTOCITE_PARA11' | translate }} <a href="http://www.tandfonline.com/doi/citedby/10.1080/01615440.2016.1220269" target="_blank">the paper at Historical Methods</a> {{ 'HOME_HOWTOCITE_PARA111' | translate }} <a href="http://ricardo.medialab.sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods_revised.pdf" target="_blank">our preprint version: 01-May-2016</a></p>
+      <h4><strong>{{ 'HOME_HOWTOCITE_SUBTITLE2' | translate }}</strong></h4>
+      <p>{{ 'HOME_HOWTOCITE_PARA2' | translate }}<br> <a href="http://dh2016.adho.org/abstracts/177" target="_blank">http://dh2016.adho.org/abstracts/177</a></p>
+      <p>{{ 'HOME_HOWTOCITE_PARA22' | translate }} <a href="http://medialab.github.io/ricardo" target="_blank">our presentation slides</a> {{ 'HOME_HOWTOCITE_PARA222' | translate }} <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_fr.pdf" target="_blank">l'abstract en français</a></p>
     </div>
     <div class="col-md-4">
-      <h4><strong>{{ 'HOME_SCIENCE_RIGHT_SUBTITLE' | translate }}</strong></h4>
-      <p>{{ 'HOME_SCIENCE_RIGHT_PARA' | translate }} <a href="https://opendatacommons.org/licenses/by/">https://opendatacommons.org/licenses/by/</a> <a href="https://github.com/medialab/ricardo_data">https://github.com/medialab/ricardo_data</a></p>
+      <h3 class="title-border">{{ 'HOME_SCIENCE_TITLE' | translate }}</h3>
+      <p>{{ 'HOME_SCIENCE_LEAD' | translate }}</p>
+      <h4><strong>{{ 'HOME_SCIENCE_SUBTITLE1' | translate }}</strong></h4>
+      <p>{{ 'HOME_SCIENCE_PARA1' | translate }}</p>
+      <a href="https://github.com/medialab/ricardo">https://github.com/medialab/ricardo</a>
+      <h4><strong>{{ 'HOME_SCIENCE_SUBTITLE2' | translate }}</strong></h4>
+      <p>{{ 'HOME_SCIENCE_PARA2' | translate }} <a href="https://opendatacommons.org/licenses/by/">https://opendatacommons.org/licenses/by/</a> <a href="https://github.com/medialab/ricardo_data">https://github.com/medialab/ricardo_data</a></p>
     </div>
   </div>
 </div>
