--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h1 class="title-border">{{ 'WORLD_INTRO' | translate }}</h1>
-      <p class="lead">{{ 'WORLD_INTRO_PARA' | translate }}</p>
+      <p>{{ 'WORLD_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
